fixed_director_edit, changed removed movieenter border.

--- a/views/movieenter.ejs
+++ b/views/movieenter.ejs
@@ -64,7 +64,7 @@
 
           <div class="formfield">
             <div class="formfield--prompt">Director:</div>
-            <input type="text"a id="meDirector" name="director"><%= themovie.director %>
+            <input type="text" id="meDirector" name="director" value="<%= themovie.director %>">
           </div>
 
           <div class="formfield">
