--- a/public/stylesheets/movieEnter.css
+++ b/public/stylesheets/movieEnter.css
@@ -152,7 +152,7 @@ CONTENT
 }
 
 .entering-data {
-  border: 3px solid #DC4C18;
+  /*border: 3px solid #DC4C18;*/
   border-radius: 10px;
   padding: 30px;
   float: center;
