--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,11 +1,10 @@
-html,body,.film { height: 100%; }
+html,body,.film { height: 100%; width: 100% ; }
 
 body {
-  background-color: #FFFFFF; /*#805E33*/
+  background-color: #FFFFFF;
   color: #FFFFFF;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-   height: 100%;
 
 }
 
@@ -17,6 +16,17 @@ h1 {
   color: #FFFFFF;
 }
 
+/*.col-md-4, {
+  border-color: red;
+  border-width: 5px;
+  border-style: groove;
+}
+
+.col-md-12 {
+  border-color: red;
+  border-width: 5px;
+  border-style: groove;
+}*/
 
 .navbar-default {
   background-color: rgba(255, 255, 255, 0.8);
@@ -51,8 +61,6 @@ h1 {
   background-color: rgba(128, 94, 51, 0.7);/*#805E33;*/
   padding: 15px 5px 10px 5px;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.7);
-
-
 }
 
 input {
@@ -81,17 +89,18 @@ input {
   margin-left: -48px;
   width: 96px;
   height: 96px;
-  /*background-color: white;*/
+
   border-radius: 48px;
   padding: 4px;
   margin-top: 255px;
+  z-index: 2;
 }
 
 #banner-photo span p {
   text-align: center;
   width: 88px;
   height: 88px;
-  margin-top: -95px;
+  margin-top: -85px;
   background-color: #FFC957;
   line-height: 88px;
   border-radius: 44px;
@@ -100,17 +109,25 @@ input {
   font-family: 'bebas_neueregular';
 }
 
+#title_holder {
+  background-color: rgba(255, 255, 255, 0.4);
+  height: 24px;
+  position: absolute;
+  margin-top: 180px;
+  z-index: 1;
+}
+
 #splash_title{
   color: black;
   text-align: center;
   position: absolute;
-  margin-top: 250px;
-  margin-left: 285px;
+  margin-top: 180px;
+  margin-left: 360px;
 }
 
 /*.line{
    border-bottom: solid 3px #DC4C18;
-   height: 48px;
+   height: 24px;
    z-index: 1;
 }
 
@@ -120,6 +137,7 @@ input {
    border-radius: 50%;
    border: 2px solid #FFC957;
    background-color: #FFC957;
+   margin-top: -55px;
    z-index: 2;
    text-align: center;
    margin: 0 auto;
@@ -127,7 +145,7 @@ input {
 
 .circle p {
   text-align: center;
-  width: 88px;
+ /* width: 88px;
   height: 88px;
   margin-top: -95px;
   background-color: #FFC957;
@@ -137,5 +155,9 @@ input {
   color: white;
   font-family: 'bebas_neueregular';
 
+
+}*/
+
+#filler {
+  height: 100px;
 }
-*/
