--- a/views/movieenter.ejs
+++ b/views/movieenter.ejs
@@ -65,7 +65,7 @@
 
           <div class="formfield">
             <div class="formfield--prompt">Director</div>
-            <input type="text" id="meDirector" name="director"><%= themovie.director %>
+            <input type="text" id="meDirector" name="director" value="<%= themovie.director %>">
           </div>
 
           <div class="formfield">
